<resources>
    <string name="app_name">MabuhayELMS</string>

    <string name="title_activity_teacher">teacher</string>
    <string name="title_activity_admin">admin</string>
    <string name="title_activity_student">student</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sq1" />
    <string name="sq2" />
    <string name="v1" />
    <string name="Username" />
    <string name="Password" />
    <string name="Login" />
    <string name="create_a_class">CREATE A CLASS</string>
    <string name="create_a_class_info">Create your own class schedule and define the time and exact days!</string>
    <string name="create_hw_info">Choose a class and create a homework for your students. You can also assign the due date and time!</string>
    <string name="create_a_homework">CREATE A HOMEWORK</string>
    <string name="welcomeimg">welcoming</string>
    <string name="welcome_admin">WELCOME ADMIN</string>
    <string name="add_teacher">ADD TEACHER</string>
    <string name="add_teacher_info">You can now add a new Teacher , with their name, username and password!</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="add_student_info">You can now add a new Student, with their name, username and password!</string>
    <string name="waveimg">waveimg</string>
    <string name="add_teacher_img">add_teacher_img</string>
    <string name="add_student_img">add_student_img</string>
    <string name="nav_admin_img">nav_admin_img</string>
    <string name="mabuhay_technological_college">Mabuhay Technological College</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="email">Email</string>
    <string name="create_a_teacher">CREATE A TEACHER</string>
    <string name="hello">Hello</string>
</resources>