<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="0dp">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="429dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-70dp"
        android:contentDescription="@string/sq1"
        app:srcCompat="@drawable/scroll"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="479dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-34dp"
        android:contentDescription="@string/sq2"
        app:srcCompat="@drawable/scroll" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="271dp"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/v1"
        android:src="@drawable/v2"
        android:visibility="visible"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="377dp"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/let_s_get_started"
            android:textColor="#724EB3"
            android:textSize="33sp" />

        <TextView
            android:id="@+id/textEnter"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/enter_your_details_to_continue"
            android:textColor="#9F8AC6"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/email"
            android:textColor="#9F79E1"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText

            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="53dp"

            android:background="@drawable/round_corner"
            android:ems="10"
            android:fontFamily="sans-serif-medium"

            android:hint="@string/Username"
            android:inputType="textPersonName"

            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textEmailReg"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:fontFamily="sans-serif-black"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textColor="#9F79E1"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText

            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"

            android:background="@drawable/round_corner"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/Password"
            android:inputType="textPassword"

            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner2"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#FBFBFB"
            app:backgroundTint="#BD51CF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textMabuhay"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mabuhay_technological_college"
            android:textColor="#9F8AC6"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</RelativeLayout>



