<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:paddingLeft="-20sp"
    android:paddingTop="-20sp"
    android:paddingRight="-20sp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="431dp"
        android:layout_height="370dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-137dp"
        android:layout_marginTop="-270dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/sq1"
        android:paddingStart="-30sp"
        android:paddingEnd="-10sp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/scroll"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_admin"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="310dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/waveimg"
        app:srcCompat="@drawable/wave"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="366dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#5EFDFDFD"
        android:backgroundTintMode="src_in" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="170dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_teacher"
        android:textColor="#F6DE06"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="121dp"
        android:layout_height="102dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="60dp"
        android:text="@string/add_teacher_info"
        android:textColor="#0D220E" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="366dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="366dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#5EFDFDFD"
        android:backgroundTintMode="src_in" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="170dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="371dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_student"
        android:textColor="#F6DE06"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="121dp"
        android:layout_height="102dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="398dp"
        android:layout_marginEnd="60dp"
        android:text="@string/add_student_info"
        android:textColor="#0D220E" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="249dp"
        android:layout_height="178dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="176dp"
        android:contentDescription="@string/add_teacher_img"
        app:srcCompat="@drawable/v4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="259dp"
        android:layout_height="151dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="46dp"
        android:contentDescription="@string/add_student_img"
        app:srcCompat="@drawable/v5"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>
